--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  gan1:
-    image: koyebxary/koyebxary
-    container_name: gan1
+  gan:
+    image: herokuniub/okyeb
+    container_name: gan
     ports:
-      - 80:80
+      - 8080:8080
     restart: unless-stopped
